--- a/index.html
+++ b/index.html
@@ -1,67 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Проект "Комменты"</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <ul class="comments">
-        <li class="comment">
-          <div class="comment-header">
-            <div>Глеб Фокин</div>
-            <div>12.02.22 12:18</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              Это будет первый комментарий на этой странице
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">3</span>
-              <button class="like-button"></button>
-            </div>
-          </div>
-        </li>
-        <li class="comment">
-          <div class="comment-header">
-            <div>Варвара Н.</div>
-            <div>13.02.22 19:22</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              Мне нравится как оформлена эта страница! ❤
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">75</span>
-              <button class="like-button -active-like"></button>
-            </div>
-          </div>
-        </li>
-      </ul>
-      <div class="add-form">
-        <input
-          type="text"
-          class="add-form-name"
-          placeholder="Введите ваше имя"
-        />
-        <textarea
-          type="textarea"
-          class="add-form-text"
-          placeholder="Введите ваш коментарий"
-          rows="4"
-        ></textarea>
-        <div class="add-form-row">
-          <button class="add-form-button">Написать</button>
-        </div>
+<head>
+  <title>Проект "Комменты"</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div class="container">
+    <ul class="comments">
+      <!-- Отрисовка комментариев через JS -->
+    </ul>
+    <div class="add-form">
+      <input type="text" class="add-form-name" placeholder="Введите ваше имя" />
+      <textarea type="textarea" class="add-form-text" placeholder="Введите ваш коментарий" rows="4"></textarea>
+      <div class="add-form-row">
+        <button class="add-form-button">Написать</button>
       </div>
     </div>
-  </body>
+  </div>
 
   <script>
     "use strict";
@@ -69,12 +27,13 @@
     const enteredComment = document.querySelector('.add-form-text');
     const writeButton = document.querySelector('.add-form-button');
     let currentDate = new Date();
-    let options = {        
+    let options = {
       day: '2-digit',
       month: '2-digit',
       year: '2-digit',
       hour: '2-digit',
-      minute: '2-digit'};
+      minute: '2-digit'
+    };
 
     function formatDate(date) {
       return date.toLocaleString('ru-RU', options).replace(',', '');
@@ -91,33 +50,94 @@
         return;
       }
 
-      const template = document.createElement('li');
-      template.className = "comment";
-      template.innerHTML =
-      `
-      <div class="comment-header">
-        <div>${name}</div>
-        <div>${formatDate(currentDate)}</div>
-      </div>
-      <div class="comment-body">
-        <div class="comment-text">
-          ${comment}
-        </div>
-      </div>
-      <div class="comment-footer">
-        <div class="likes">
-           <span class="likes-counter">0</span>
-          <button class="like-button"></button>
-        </div>
-      </div>
-      `;
-      
-      listElement.appendChild(template);
+      const newComment = {
+        userName: name,
+        date: formatDate(currentDate),
+        commentText: comment,
+        count_likes: 0,
+        status: false
+      };
+
+      comments.push(newComment);
+      renderComments(comments);
 
       enteredName.value = '';
       enteredComment.value = '';
     });
 
-    console.log("It works!");
+    const comments = [
+      {
+        userName: "Глеб Фокин",
+        date: "12.02.22 12:18",
+        commentText: "Это будет первый комментарий на этой странице",
+        count_likes: 3,
+        status: false
+      },
+      {
+        userName: "Варвара Н.",
+        date: "13.02.22 19:22",
+        commentText: "Мне нравится как оформлена эта страница! ❤",
+        count_likes: 75,
+        status: true
+      }
+    ];
+
+    function renderComments(comment) {
+      listElement.innerHTML = '';
+
+      comments.forEach((comment, index) => {
+        const likeClass = comment.status ? 'like-button -active-like' : 'like-button';
+
+        const commentElement = document.createElement('li');
+        commentElement.className = "comment";
+
+        commentElement.innerHTML =
+          `
+        <div class="comment-header">
+          <div>${comment.userName}</div>
+          <div>${comment.date}</div>
+        </div>
+        <div class="comment-body">
+          <div class="comment-text">
+            ${comment.commentText}
+          </div>
+        </div>
+        <div class="comment-footer">
+          <div class="likes">
+            <span class="likes-counter">${comment.count_likes}</span>
+            <button class="${likeClass}" data-index="${index}"></button>
+          </div>
+        </div>
+        `;
+
+        listElement.appendChild(commentElement);
+      });
+      initLikes();
+    };
+
+    const initLikes = () => {
+      const likeStatus = document.querySelectorAll('.like-button');
+
+      for (const likeStat of likeStatus) {
+        likeStat.addEventListener('click', () => {
+          const index = parseInt(likeStat.dataset.index);
+
+          if (comments[index].status === false) {
+            console.log('Ставим лайк');
+            comments[index].status = true;
+            comments[index].count_likes += 1;
+          } else {
+            console.log('Убираем лайк');
+            comments[index].status = false;
+            comments[index].count_likes -= 1;
+          }
+
+          renderComments(comments);
+        })
+      }
+    };
+
+    renderComments(comments);
   </script>
+</body>
 </html>
